C-1/usetool/parse.output
Terminals unused in grammar

   '['
   ']'
   END_OF_FILE
   VOID


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: VarDec
    5       | FuncDef

    6 VarDec: Specificer VarList ';'

    7 VarList: Var ',' VarList
    8        | Var

    9 Var: ID
   10    | ID '=' Exp

   11 FuncDef: Specificer FuncHeader CompSt

   12 FuncHeader: ID '(' ParamList ')'

   13 ParamList: /* empty */
   14          | Param ',' ParamList
   15          | Param

   16 Param: Specificer ID

   17 Specificer: INT
   18           | FLOAT
   19           | CHAR
   20           | BOOL

   21 CompSt: '{' StmtList '}'

   22 StmtList: /* empty */
   23         | Stmt StmtList

   24 Stmt: Exp ';'
   25     | ID '=' Exp ';'
   26     | ID OP_ASSIGN Exp ';'
   27     | IF '(' Exp ')' Stmt
   28     | IF '(' Exp ')' Stmt ELSE Stmt
   29     | WHILE '(' Exp ')' Stmt
   30     | RETURN Exp ';'
   31     | CompSt
   32     | VarDec

   33 Exp: Exp '+' Exp
   34    | Exp '-' Exp
   35    | Exp '*' Exp
   36    | Exp '/' Exp
   37    | Exp '%' Exp
   38    | Exp REL_OP Exp
   39    | S_PLUS Exp
   40    | S_MINUS Exp
   41    | Exp S_PLUS
   42    | Exp S_MINUS
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | '!' Exp
   46    | '-' Exp
   47    | '(' Exp ')'
   48    | Exp ',' Exp
   49    | ID
   50    | C_INT
   51    | C_FLOAT
   52    | C_CHAR
   53    | TRUE
   54    | FALSE
   55    | ID '(' RParamList ')'

   56 RParamList: /* empty */
   57           | RParam ',' RParamList
   58           | RParam

   59 RParam: Exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 45
'%' (37) 37
'(' (40) 12 27 28 29 47 55
')' (41) 12 27 28 29 47 55
'*' (42) 35
'+' (43) 33
',' (44) 7 14 48 57
'-' (45) 34 46
'/' (47) 36
';' (59) 6 24 25 26 30
'=' (61) 10 25
'[' (91)
']' (93)
'{' (123) 21
'}' (125) 21
error (256)
S_PLUS (258) 39 41
S_MINUS (259) 40 42
AND (260) 43
OR (261) 44
IF (262) 27 28
ELSE (263) 28
WHILE (264) 29
RETURN (265) 30
END_OF_FILE (266)
REL_OP (267) 38
OP_ASSIGN (268) 26
ID (269) 9 10 12 16 25 26 49 55
C_INT (270) 50
C_FLOAT (271) 51
C_CHAR (272) 52
INT (273) 17
FLOAT (274) 18
CHAR (275) 19
VOID (276)
BOOL (277) 20
TRUE (278) 53
FALSE (279) 54


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1, on right: 0
ExtDefList (42)
    on left: 2 3, on right: 1 3
ExtDef (43)
    on left: 4 5, on right: 3
VarDec (44)
    on left: 6, on right: 4 32
VarList (45)
    on left: 7 8, on right: 6 7
Var (46)
    on left: 9 10, on right: 7 8
FuncDef (47)
    on left: 11, on right: 5
FuncHeader (48)
    on left: 12, on right: 11
ParamList (49)
    on left: 13 14 15, on right: 12 14
Param (50)
    on left: 16, on right: 14 15
Specificer (51)
    on left: 17 18 19 20, on right: 6 11 16
CompSt (52)
    on left: 21, on right: 11 31
StmtList (53)
    on left: 22 23, on right: 21 23
Stmt (54)
    on left: 24 25 26 27 28 29 30 31 32, on right: 23 27 28 29
Exp (55)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50
    51 52 53 54 55, on right: 10 24 25 26 27 28 29 30 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 59
RParamList (56)
    on left: 56 57 58, on right: 55 57
RParam (57)
    on left: 59, on right: 57 58


State 0

    0 $accept: . Program $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4

    $default  reduce using rule 2 (ExtDefList)

    Program     go to state 5
    ExtDefList  go to state 6
    ExtDef      go to state 7
    VarDec      go to state 8
    FuncDef     go to state 9
    Specificer  go to state 10


State 1

   17 Specificer: INT .

    $default  reduce using rule 17 (Specificer)


State 2

   18 Specificer: FLOAT .

    $default  reduce using rule 18 (Specificer)


State 3

   19 Specificer: CHAR .

    $default  reduce using rule 19 (Specificer)


State 4

   20 Specificer: BOOL .

    $default  reduce using rule 20 (Specificer)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 6

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 7

    3 ExtDefList: ExtDef . ExtDefList

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 12
    ExtDef      go to state 7
    VarDec      go to state 8
    FuncDef     go to state 9
    Specificer  go to state 10


State 8

    4 ExtDef: VarDec .

    $default  reduce using rule 4 (ExtDef)


State 9

    5 ExtDef: FuncDef .

    $default  reduce using rule 5 (ExtDef)


State 10

    6 VarDec: Specificer . VarList ';'
   11 FuncDef: Specificer . FuncHeader CompSt

    ID  shift, and go to state 13

    VarList     go to state 14
    Var         go to state 15
    FuncHeader  go to state 16


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

    9 Var: ID .
   10    | ID . '=' Exp
   12 FuncHeader: ID . '(' ParamList ')'

    '='  shift, and go to state 17
    '('  shift, and go to state 18

    $default  reduce using rule 9 (Var)


State 14

    6 VarDec: Specificer VarList . ';'

    ';'  shift, and go to state 19


State 15

    7 VarList: Var . ',' VarList
    8        | Var .

    ','  shift, and go to state 20

    $default  reduce using rule 8 (VarList)


State 16

   11 FuncDef: Specificer FuncHeader . CompSt

    '{'  shift, and go to state 21

    CompSt  go to state 22


State 17

   10 Var: ID '=' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 34


State 18

   12 FuncHeader: ID '(' . ParamList ')'

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    BOOL   shift, and go to state 4

    $default  reduce using rule 13 (ParamList)

    ParamList   go to state 35
    Param       go to state 36
    Specificer  go to state 37


State 19

    6 VarDec: Specificer VarList ';' .

    $default  reduce using rule 6 (VarDec)


State 20

    7 VarList: Var ',' . VarList

    ID  shift, and go to state 38

    VarList  go to state 39
    Var      go to state 15


State 21

   21 CompSt: '{' . StmtList '}'

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    '{'      shift, and go to state 21
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    ID       shift, and go to state 43
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    INT      shift, and go to state 1
    FLOAT    shift, and go to state 2
    CHAR     shift, and go to state 3
    BOOL     shift, and go to state 4
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    $default  reduce using rule 22 (StmtList)

    VarDec      go to state 44
    Specificer  go to state 45
    CompSt      go to state 46
    StmtList    go to state 47
    Stmt        go to state 48
    Exp         go to state 49


State 22

   11 FuncDef: Specificer FuncHeader CompSt .

    $default  reduce using rule 11 (FuncDef)


State 23

   39 Exp: S_PLUS . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 50


State 24

   40 Exp: S_MINUS . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 51


State 25

   46 Exp: '-' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 52


State 26

   45 Exp: '!' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 53


State 27

   47 Exp: '(' . Exp ')'

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 54


State 28

   49 Exp: ID .
   55    | ID . '(' RParamList ')'

    '('  shift, and go to state 55

    $default  reduce using rule 49 (Exp)


State 29

   50 Exp: C_INT .

    $default  reduce using rule 50 (Exp)


State 30

   51 Exp: C_FLOAT .

    $default  reduce using rule 51 (Exp)


State 31

   52 Exp: C_CHAR .

    $default  reduce using rule 52 (Exp)


State 32

   53 Exp: TRUE .

    $default  reduce using rule 53 (Exp)


State 33

   54 Exp: FALSE .

    $default  reduce using rule 54 (Exp)


State 34

   10 Var: ID '=' Exp .
   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57
    '+'      shift, and go to state 58
    '-'      shift, and go to state 59
    '*'      shift, and go to state 60
    '/'      shift, and go to state 61
    '%'      shift, and go to state 62
    AND      shift, and go to state 63
    OR       shift, and go to state 64
    REL_OP   shift, and go to state 66

    $default  reduce using rule 10 (Var)


State 35

   12 FuncHeader: ID '(' ParamList . ')'

    ')'  shift, and go to state 67


State 36

   14 ParamList: Param . ',' ParamList
   15          | Param .

    ','  shift, and go to state 68

    $default  reduce using rule 15 (ParamList)


State 37

   16 Param: Specificer . ID

    ID  shift, and go to state 69


State 38

    9 Var: ID .
   10    | ID . '=' Exp

    '='  shift, and go to state 17

    $default  reduce using rule 9 (Var)


State 39

    7 VarList: Var ',' VarList .

    $default  reduce using rule 7 (VarList)


State 40

   27 Stmt: IF . '(' Exp ')' Stmt
   28     | IF . '(' Exp ')' Stmt ELSE Stmt

    '('  shift, and go to state 70


State 41

   29 Stmt: WHILE . '(' Exp ')' Stmt

    '('  shift, and go to state 71


State 42

   30 Stmt: RETURN . Exp ';'

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 72


State 43

   25 Stmt: ID . '=' Exp ';'
   26     | ID . OP_ASSIGN Exp ';'
   49 Exp: ID .
   55    | ID . '(' RParamList ')'

    '='        shift, and go to state 73
    '('        shift, and go to state 55
    OP_ASSIGN  shift, and go to state 74

    $default  reduce using rule 49 (Exp)


State 44

   32 Stmt: VarDec .

    $default  reduce using rule 32 (Stmt)


State 45

    6 VarDec: Specificer . VarList ';'

    ID  shift, and go to state 38

    VarList  go to state 14
    Var      go to state 15


State 46

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 47

   21 CompSt: '{' StmtList . '}'

    '}'  shift, and go to state 75


State 48

   23 StmtList: Stmt . StmtList

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    '{'      shift, and go to state 21
    IF       shift, and go to state 40
    WHILE    shift, and go to state 41
    RETURN   shift, and go to state 42
    ID       shift, and go to state 43
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    INT      shift, and go to state 1
    FLOAT    shift, and go to state 2
    CHAR     shift, and go to state 3
    BOOL     shift, and go to state 4
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    $default  reduce using rule 22 (StmtList)

    VarDec      go to state 44
    Specificer  go to state 45
    CompSt      go to state 46
    StmtList    go to state 76
    Stmt        go to state 48
    Exp         go to state 49


State 49

   24 Stmt: Exp . ';'
   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57
    '+'      shift, and go to state 58
    '-'      shift, and go to state 59
    '*'      shift, and go to state 60
    '/'      shift, and go to state 61
    '%'      shift, and go to state 62
    AND      shift, and go to state 63
    OR       shift, and go to state 64
    ','      shift, and go to state 65
    ';'      shift, and go to state 77
    REL_OP   shift, and go to state 66


State 50

   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   39    | S_PLUS Exp .
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57

    $default  reduce using rule 39 (Exp)


State 51

   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   40    | S_MINUS Exp .
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57

    $default  reduce using rule 40 (Exp)


State 52

   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   46    | '-' Exp .
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57

    $default  reduce using rule 46 (Exp)


State 53

   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | '!' Exp .
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57

    $default  reduce using rule 45 (Exp)


State 54

   33 Exp: Exp . '+' Exp
   34    | Exp . '-' Exp
   35    | Exp . '*' Exp
   36    | Exp . '/' Exp
   37    | Exp . '%' Exp
   38    | Exp . REL_OP Exp
   41    | Exp . S_PLUS
   42    | Exp . S_MINUS
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   47    | '(' Exp . ')'
   48    | Exp . ',' Exp

    S_PLUS   shift, and go to state 56
    S_MINUS  shift, and go to state 57
    '+'      shift, and go to state 58
    '-'      shift, and go to state 59
    '*'      shift, and go to state 60
    '/'      shift, and go to state 61
    '%'      shift, and go to state 62
    AND      shift, and go to state 63
    OR       shift, and go to state 64
    ','      shift, and go to state 65
    ')'      shift, and go to state 78
    REL_OP   shift, and go to state 66


State 55

   55 Exp: ID '(' . RParamList ')'

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    $default  reduce using rule 56 (RParamList)

    Exp         go to state 79
    RParamList  go to state 80
    RParam      go to state 81


State 56

   41 Exp: Exp S_PLUS .

    $default  reduce using rule 41 (Exp)


State 57

   42 Exp: Exp S_MINUS .

    $default  reduce using rule 42 (Exp)


State 58

   33 Exp: Exp '+' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 82


State 59

   34 Exp: Exp '-' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 83


State 60

   35 Exp: Exp '*' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 84


State 61

   36 Exp: Exp '/' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 85


State 62

   37 Exp: Exp '%' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 86


State 63

   43 Exp: Exp AND . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 87


State 64

   44 Exp: Exp OR . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 88


State 65

   48 Exp: Exp ',' . Exp

    S_PLUS   shift, and go to state 23
    S_MINUS  shift, and go to state 24
    '-'      shift, and go to state 25
    '!'      shift, and go to state 26
    '('      shift, and go to state 27
    ID       shift, and go to state 28
    C_INT    shift, and go to state 29
    C_FLOAT  shift, and go to state 30
    C_CHAR   shift, and go to state 31
    TRUE     shift, and go to state 32
    FALSE    shift, and go to state 33

    Exp  go to state 89


State 66

   38 Exp: Exp REL_OP . Exp
